QXGEdit - Qt XG Editor
----------------------

SVN TRUNK

- Debugging stacktrace now applies to all working threads.

- libX11 is now being added explicitly to the build link phase,
  as seen necessary on some bleeding-edge distros eg. Fedora 13,
  Debian 6.

- Moving from old deprecated Qt3'ish custom event post handling
  into regular asynchronous signal/slot strategy. (EXPERIMENTAL)

- General standard dialog buttons layout is now in place.


0.1.0  2010-04-21  Second public release.

- Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

- General source tree layout and build configuration change.

- Make build compilation work for gcc >= 4.4.0, by adding some
  missing standard C99 includes.

- LADISH Level 1 support has been added: SIGUSR1 signal trap
  just makes it a shortcut to File/Save.

- Uservoice (QS300) AmpEG Attack, Decay Level 1 and 2 parameters
  now have a bit cleaner, clearer out-of-the-box default values.

- Uservoice (QS300) preset combo-box drop-down list now gets its
  current item selection set alright.

- Global configuration state is now explicitly saved/committed to
  disk when Options dialog changes are accepted and applied.

- Variation part parameter is now a drop-down combo-box.

- New reset button for reverb, chorus and variation parameters.

- Randomization of all current vparameter values is now available,
  allowing for great experimentation and exploration of brand new
  sound settings (just try View/Randomize).

- All graphics lines are now slightly gray colored, instead of plain
  black or white, or whatever the current theme text color.

- Added user confirmation for QS300 user voice preset replacement;
  preset files are not deleted from file-system anymore.


0.0.1  2009-09-19  First public release.
