@@ -1,7 +1,7 @@
 // qxgeditDrop.cpp
 //
 /****************************************************************************
-   Copyright (C) 2005-2009, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2005-2011, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -115,7 +115,6 @@ XGParam *qxgeditDrop::param (void) const
 void qxgeditDrop::comboActivated ( int iCombo )
 {
 	setValue((unsigned short) QComboBox::itemData(iCombo).toUInt());
-	emit valueChanged(value());
 }
 
 
